[package]
name = "opq-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "opq"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
arrow = "56.1.0"
arrow-schema = "56.1.0"
bytes = "1.5"
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = "7.1.1"
orc-rust = "0.6.3"
parquet = "56.1.0"
serde_json = "1.0.117"
flate2 = "1.0"
snap = "1.1"
zstd = "0.13"
