[package]
name = "opq-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "opq"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
arrow = "55.2.0"
arrow-array = "55.2.0"
arrow-schema = "55.2.0" 
bytes = "1.5"
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = "7.1.1"
datafusion = "49.0.2"
orc-rust = "=0.6.2"
parquet = "55.2.0"
serde_json = "1.0.117"
flate2 = "1.0"
snap = "1.1"
zstd = "0.13"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
futures = "0.3.31"
